# The-Defect

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  aiAgentPlan.md  aiGamePlan.md  copilot-agent.config.json  partitions.csv  readme.md  sdkconfig  sdkconfig.defaults  the-defect-presentation.html  video.md
docs/: software-architecture.md
main/: CMakeLists.txt  idf_component.yml  ili9881c_init_cmds.h  main.cpp
main/app/: app.cpp  app.hpp  appStack.cpp  appStack.hpp  appStackManager.cpp  appStackManager.hpp  testApp.cpp  testApp.hpp
main/app/bleSettingsApp/: bleSettingsApp.cpp  bleSettingsApp.hpp
main/app/chineseChess/: chessAI.cpp  chessAI.hpp  chessLogic.cpp  chessLogic.hpp  chineseChessApp.cpp  chineseChessApp.hpp  chineseChessLogic.cpp  chineseChessLogic.hpp  chineseChessRoom.cpp  chineseChessRoom.hpp
main/app/desktopApp/: desktopApp.cpp  desktopApp.hpp  gui.cpp  gui.hpp
main/app/fruitNinja/: fruitNinjaApp.cpp  fruitNinjaApp.hpp  fruitNinjaLogic.cpp  fruitNinjaLogic.hpp  fruitNinjaRenderer.cpp  fruitNinjaRenderer.hpp  fruitNinjaRoom.cpp  fruitNinjaRoom.hpp
main/app/powerManagementApp/: powerManagementApp.cpp  powerManagementApp.hpp
main/app/snake/snakeGame/: gameLogic.cpp  gameLogic.hpp  inputer.cpp  snakeGame.cpp  snakeGame.hpp
main/app/snake/snakeRoom/: snakeRoom.cpp  snakeRoom.hpp
main/app/snakeGame/: gameLogic.cpp  gameLogic.hpp  inputer.hpp  snakeGame.cpp  snakeGame.hpp
main/app/testApp/: testApp.cpp  testApp.hpp
main/app/tetris/: plan.md  progress.md  tetris.cpp  tetris.hpp  tetrisApp.cpp  tetrisApp.hpp  tetrisRoomApp.cpp  tetrisRoomApp.hpp
main/app/tetris/gameLogic/: board.cpp  board.hpp  gameState.hpp  pieceQueue.cpp  pieceQueue.hpp  player_state.cpp  player_state.hpp  srs.hpp  tetrisClient.cpp  tetrisClient.hpp  tetrisTypes.hpp  tetris_client.cpp  tetris_client.hpp
main/app/tetris/net/: tetris_net.cpp  tetris_net.hpp
main/app/tetris/renderer/: tetris_renderer.cpp  tetris_renderer.hpp
main/app/timeSettingsApp/: timeSettingsApp.cpp  timeSettingsApp.hpp
main/app/wifiSettingsApp/: wifiSettingsApp.cpp  wifiSettingsApp.hpp
main/audio/: Audio.cpp  Audio.hpp  ES8311.cpp  ES8311.hpp  audioManager.cpp  audioManager.hpp  decoder.cpp  decoder.hpp
main/battery/: batteryManager.cpp  batteryManager.hpp
main/ble/: ble.cpp  ble.hpp  gamepadClient.cpp  gamepadClient.hpp  gamepadManager.cpp  gamepadManager.hpp  gamepadService.cpp  gamepadService.hpp
main/bleGamepad/: bleGamepad.cpp  bleGamepad.hpp  gamepadState.hpp
main/display/: display.cpp  display.hpp  font.cpp  font.hpp  ili9881c.cpp  ili9881c.hpp  initCommand.inl
main/gamepadIndev/: gamepadIndev.cpp  gamepadIndev.hpp
main/gpio/: gpio.hpp
main/gt911/: gt911.cpp  gt911.hpp
main/gui/: gui.cpp  gui.hpp
main/iic/: iic.cpp  iic.hpp
main/monitor/: cpuMonitor.cpp  cpuMonitor.hpp
main/mutex/: mutex.hpp
main/power/: powerManager.cpp  powerManager.hpp
main/screenStream/: screenStream.cpp  screenStream.hpp
main/screen_stream/: screenStream.cpp  screenStream.hpp
main/server/: serverKernal.cpp  serverKernal.hpp
main/server/buildinHtml/: file.hpp  file.html
main/storage/: fat.cpp  fat.hpp  mem.cpp  mem.hpp  sd.cpp  sd.hpp  vfs.hpp
main/task/: task.cpp  task.hpp
main/touch/: touch.cpp  touch.hpp
main/uart/: uart.cpp  uart.hpp
main/ulp/: CMakeLists.txt  main.c
main/virtualIndev/: virtualIndev.cpp  virtualIndev.hpp
main/wifi/: http.cpp  http.hpp  mdns.cpp  mdns.hpp  slave.cpp  slave.hpp  socketStream.cpp  socketStream.hpp  socketStreamWindow.cpp  socketStreamWindow.hpp  wifi.cpp  wifi.hpp
main/wsServer/: wsServer.cpp  wsServer.hpp
patches/: 0001-esp_lvgl_adapter-frame-ready-callback.patch  0002-esp_lvgl_adapter-ppa-max-pending-trans.patch  0003-esp_driver_ppa-sr_macro_bk_ro_bypass.patch  apply.sh
reserces/server/: index.html
reserces/server/screen/: screen.html  screen.js
reserces/server/server/: server.html  server.js
reserces/server/tetris/: tetris.html
