idf_component_register(SRCS "main.cpp"
                            "gui/gui.cpp"
                            "iic/iic.cpp"
                            "task/task.cpp"
                            "wifi/wifi.cpp" "wifi/mdns.cpp" "wifi/socketStream.cpp" "wifi/socketStreamWindow.cpp" "wifi/http.cpp"
                            "display/display.cpp" "display/ili9881c.cpp" "display/font.cpp"
                            "touch/touch.cpp"
                            "utility/stringCompare.cpp"
                            "storage/fat.cpp" "storage/mem.cpp" "storage/sd.cpp"
                            "server/serverKernal.cpp"
                            "virtualIndev/virtualIndev.cpp"
                            "screenStream/screenStream.cpp"
                            "wsServer/wsServer.cpp"
                            "app/app.cpp"
                            "app/testApp/testApp.cpp"
                            "app/desktopApp/desktopApp.cpp" "app/desktopApp/gui.cpp"
                       INCLUDE_DIRS "."
                       "../managed_components/espressif__esp_lvgl_adapter/src/display"
                       "../managed_components/espressif__esp_lvgl_adapter/src/adapter"
                       "../managed_components/espressif__esp_lvgl_adapter/src/display/ports"
                       REQUIRES nvs_flash esp_wifi esp_event esp_netif lwip
                       PRIV_REQUIRES esp_driver_gpio esp_driver_i2c esp_lvgl_adapter fatfs esp_driver_jpeg esp_http_server)
