idf_component_register(SRCS "main.cpp"
                            "gui/gui.cpp"
                            "iic/iic.cpp"
                            "task/task.cpp"
                            "wifi/wifi.cpp" "wifi/slave.cpp" "wifi/mdns.cpp" "wifi/socketStream.cpp" "wifi/socketStreamWindow.cpp" "wifi/http.cpp"
                            "display/display.cpp" "display/ili9881c.cpp" "display/font.cpp"
                            "touch/touch.cpp"
                            "utility/stringCompare.cpp"
                            "storage/fat.cpp" "storage/mem.cpp" "storage/sd.cpp"
                            "server/serverKernal.cpp"
                            "virtualIndev/virtualIndev.cpp"
                            "screenStream/screenStream.cpp"
                            "wsServer/wsServer.cpp"
                            "audio/ES8311.cpp" "audio/Audio.cpp"
                            "app/app.cpp"
                            "app/appStack.cpp"
                            "app/appStackManager.cpp"
                            "app/testApp/testApp.cpp"
                            "app/desktopApp/desktopApp.cpp"
                            "app/bleSettingsApp/bleSettingsApp.cpp"
                            "app/powerManagementApp/powerManagementApp.cpp"
                            "app/wifiSettingsApp/wifiSettingsApp.cpp"
                            "app/timeSettingsApp/timeSettingsApp.cpp"
                            "bleGamepad/bleGamepad.cpp"
                            "monitor/cpuMonitor.cpp"
                            "app/snake/snakeRoom/snakeRoom.cpp" "app/snake/snakeGame/snakeGame.cpp" "app/snake/snakeGame/gameLogic.cpp"
                            "app/tetris/gameLogic/tetris_client.cpp"
                            "app/tetris/gameLogic/player_state.cpp"
                            "app/tetris/renderer/tetris_renderer.cpp"
                            "app/tetris/tetrisApp.cpp"
                            "app/tetris/tetrisRoomApp.cpp"
                            "app/tetris/net/tetris_net.cpp"
                            "app/fruitNinja/fruitNinjaRoom.cpp"
                            "app/fruitNinja/fruitNinjaApp.cpp"
                            "app/fruitNinja/fruitNinjaLogic.cpp"
                            "app/fruitNinja/fruitNinjaRenderer.cpp"
                            "app/chineseChess/chineseChessApp.cpp"
                            "app/chineseChess/chineseChessRoom.cpp"
                            "app/chineseChess/chessLogic.cpp"
                            "app/chineseChess/chessAI.cpp"
                            "battery/batteryManager.cpp"
                       INCLUDE_DIRS "."
                       "../managed_components/espressif__esp_lvgl_adapter/src/display"
                       "../managed_components/espressif__esp_lvgl_adapter/src/adapter"
                       "../managed_components/espressif__esp_lvgl_adapter/src/display/ports"
                       REQUIRES nvs_flash esp_wifi esp_event esp_netif lwip mdns
                       PRIV_REQUIRES esp_driver_gpio esp_driver_i2c esp_driver_i2s esp_lvgl_adapter fatfs esp_driver_jpeg esp_http_server esp_codec_dev esp_audio_codec esp_audio_render gmf_core gmf_audio bt json)
